# content-gen

./: .gitignore  CLAUDE.md  README.md  package.json  start.sh
.claude/: .gitignore  README.md  settings.json
.claude/commands/: build.md  content_gen_poc_command.md  plan.md  plan_w_scouts.md  scout.md  scout_plan_build.md
.claude/hooks/: send_event.py
agents/claude_code/: registry.json
agents/claude_code/GitHubManager/: push-project-create-github-repository.md  push-project-files-create-github-repository.md  push-project-files-github-ohmnow.md  push-project-files-github-repository.md
agents/claude_code/StockPriceChecker/: find-coreweave-stock-price-near-term-estimates.md
agents/claude_code/TechSpecExpert/: generate-ui-visual-feedback-observability-ideas.md  spec-vite-terminal-assistant-ui.md  specify-vite-app-filesystem-location-guidance.md
ai_docs/: sora-video-gen.md
backend/: .env.sample  main.py  pyproject.toml
backend/src/content_gen_backend/: __main__.py  config.py  main.py
backend/src/content_gen_backend/models/: __init__.py  video_request.py  video_response.py
backend/src/content_gen_backend/routers/: videos.py
backend/src/content_gen_backend/services/: __init__.py  sora_service.py  storage_service.py
backend/src/content_gen_backend/utils/: logging_setup.py
frontend/: index.html
frontend/src/: App.vue  style.css
frontend/src/components/: VideoCreator.vue  VideoGenerator.vue  VideoLibrary.vue  VideoPlayer.vue  (+1 more)
specs/: sora-video-generation-integration.md  terminal-assistant-ui-observability-concepts.md  terminal-assistant-ui-spec.md
(+3 files in other folders)
