[project]
name = "content-gen-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.2",
    "uvicorn[standard]>=0.37.0",
    "openai>=1.54.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
]

[tool.uv]
package = true

[project.scripts]
dev = "content_gen_backend.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_gen_backend"]
